--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,5 @@
-@import "http://fonts.googleapis.com/css?family=Lato:300,400,700,900";
-@import "http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700";
+@import "//fonts.googleapis.com/css?family=Lato:300,400,700,900";
+@import "//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700";
 @import "../plugins/bootstrap/css/bootstrap.min.css";
 @import "../plugins/bootstrap/css/bootstrap-rtl.min.css";
 @import "../plugins/mcustom-scrollbar/mcustom_scrollbar.min.css";
@@ -13,7 +13,6 @@
 @import "../plugins/bootstrap/css/jasny-bootstrap.css";
 @import "icons/rounded/style.css";
 @import "icons/octicons/octicons.css";
-@import "icons/weather/css/weather-icons.min.css";
 @import "../plugins/bootstrap-loading/lada.min.css";
 @import "../plugins/bootstrap-tags-input/bootstrap-tagsinput.css";
 @import "../plugins/bootstrap-editable/css/bootstrap-editable.css";
